fixed overflow on containers to ulitmately hinder odd browser rendering on certain animations

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,10 @@ a {
   background-color: transparent;
 }
 
+#phrase {
+  overflow: hidden;
+}
+
 /* Taken from this codepen: https://codepen.io/yuanchuan/pen/OBRrrO/f70a1f9435dc90197b253b26b4d69d42 */
 #cloud {
   align-self: flex-start;
